--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/faces/cat/functionPath/functionPath-index.xhtml
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/faces/cat/functionPath/functionPath-index.xhtml
@@ -56,7 +56,7 @@
                     <h:outputText value="${cusIdx+1}"/>
                 </p:column>
                 <!--Action-->
-                <p:column headerText="#{msg['category.supportType.action']}" styleClass="TexAlCenter" width="60" exportable="false">
+                <p:column headerText="#{msg['datatable.header.action']}" styleClass="TexAlCenter" width="60" exportable="false">
                     <p:commandButton icon="fa fa-info-circle"
                                      styleClass="GreenButton Fs14 White"
                                      style=" margin-right: 10px"
