--- a/WEB_MOTEL/WebContent/faces/login/index.xhtml
+++ b/WEB_MOTEL/WebContent/faces/login/index.xhtml
@@ -64,7 +64,8 @@
                         <p:growl id="growl" showDetail="true" showSummary="false" widgetVar="growl"/>
                         <div class="Container100">
                             <p:inputText style="padding:15px !important;" value="#{authenticationController.userName}"
-                                         placeholder="Username"/>
+                                         placeholder="Địa chỉ email hoặc số điện thoại" 
+                                         />
                         </div>
                         <div class="Container100">
                             <p:password style="padding:15px !important;" value="#{authenticationController.password}"
