--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/faces/login/infoCurrUser-dlg.xhtml
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/faces/login/infoCurrUser-dlg.xhtml
@@ -34,7 +34,7 @@
                                 <p:inputText value="#{catUserController.currCatUser.userName}"
                                              id="userNameId" style="width: 80%" maxlength="50"
                                              title="#{msg['catUser.userName']}"
-                                             required="true" readonly="true"
+                                             required="false" readonly="true"
                                              requiredMessage="#{msg['common.required'].replace('{0}',msg['catUser.userName'])}"
                                              >
                                 </p:inputText>
