--- a/WEB_MOTEL/WebContent/faces/catUser/catUser-index.xhtml
+++ b/WEB_MOTEL/WebContent/faces/catUser/catUser-index.xhtml
@@ -176,13 +176,15 @@
                                     <div class="Container100 Responsive50 ">
                                         <div class="Container25 Responsive50 MarTop20">
                                             <span class="md-inputfield">
-                                                <p:inputMask value="#{catUserController.currCatUser.phoneNumber}"
+                                                <p:inputText value="#{catUserController.currCatUser.phoneNumber}"
                                                              id="phone"
                                                              title="#{msg['customer.phone']}"
                                                              required="false"
                                                              requiredMessage="#{msg['common.required'].replace('{0}',msg['customer.phone'])}"
-                                                             mask="9999999999?9">
-                                                </p:inputMask>
+                                                              validatorMessage="#{msg['customer.phone']} không hơp lệ!"
+                                                             >
+                                                    <f:validateRegex  pattern="^[0-9]+$" />
+                                                </p:inputText>
                                                 <p:message for="phone"></p:message>
                                                 <label>#{msg['customer.phone']} </label>
                                             </span>
@@ -400,7 +402,7 @@
                         <p:spacer width="2px;"/>
 
 
-                        <p:commandButton icon="fa fa-trash"
+                        <p:commandButton icon="fa fa-trash" process="@this"
                                          actionListener="#{catUserController.onDelete(catUser)}"
                                          onclick="PF('blockDlg').show()" oncomplete="PF('blockDlg').hide();"
                                          update="@widgetVar(growl),@widgetVar(tableCatUserWidget)"
